# nws-site

./: Cargo.toml  Dockerfile  README.md  bun.lockb  makefile  package-lock.json  package.json  shell.nix
.direnv/: nix-profile-24.11-mma8n3yfap91nw44  nix-profile-24.11-mma8n3yfap91nw44.rc
.github/workflows/: main.yml  nws-deploy.yaml
assets/: april_fools.html  style.css
public/: index.html
src/: App.css  App.tsx  index.css  index.tsx  main.rs  uptime_service.rs
src/components/: Blog.css  Blogs.tsx  CreateCruisePage.css  CreateCruisePage.tsx  DashboardPage.tsx  Footer.tsx  HomePage.tsx  IncidentCard.tsx  Login.css  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.css  RegisterPage.tsx  StatusPage.tsx  UptimeCard.css  UptimeCard.tsx  UptimeComparisonCard.tsx  UptimeLabelCard.tsx  VerifyPage.css  VerifyPage.tsx
src/nws-api/: calls.ts  hooks.ts  types.ts
templates/: blog.html  dashboard.html  index.html  layout.html  shutdown_warn.html  system_status.html  uptime_table.html
templates/blogs/: 11-08-2023-postmortem.html  11-28-2024-onward-portmortem.html  goodbye-nws.html
