[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.201"
serde_json = "1.0.117"
chrono = "0.4.38"
rust_decimal = "1.35.0"
anyhow = "1.0.83"
env_logger = "0.11.3"
log = "0.4.21"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
